Changelog Notes:
Re-enable default free recipes for Ingenuitive in addition to learning all other recipes.
Fix bug in Quick Worker erroring on TimedWalkActions.
Fix player Weight reducing for a split second.
Fix Ingenuitive not giving Mechanics for some dumb reason.
Remove Zombification Cure from the game
- There are other mods that add a cure and do so much more effectively, if you would like this in your game, consider one of those instead.
- The Recipes to create the cure have been removed. The item will remain for compatibility purposes for a few versions before being ultimately removed.
Add new trait: Lead Foot
Add new trait: Made of Glass
Reduce length of recovery for burns from Injured trait.
Increase time modifier for Quick Worker when reading books.
Fixed Prowess: Guns not scaling properly, Credit: vaikke
Add in Mod Options support for Client-Side Settings.
Automatically put Prepared items into their respective bags where applicable.
Automatically equip bags given from Prepared traits.
Reduce amount of free items given from Prepared traits.
Add new trait: Slow Worker
Add Sandbox Option for Slow Worker
Quick and Slow worker now take special consideration for Slow or Fast readers.
Increase Hardy regeneration strength. (it got nerfed too hard)
Gymgoer removes Exercise Fatigue.
Don't trigger Butterfingers if player has nothing in their hands.
Butterfingers triggers less while walking and more while Running or Sprinting.
Add new trait: Battering Ram
Fix Bouncer pushing enemies back up from being knocked down.